@@ -281,8 +281,13 @@ DEFINE_LOAD_STORE_MULTIPLE_EX_THUMB(POPR, ARM_SP, LDM, ARM_MEMORY_INCREMENT_AFTE
 DEFINE_LOAD_STORE_MULTIPLE_EX_THUMB(PUSH, ARM_SP, STM, ARM_MEMORY_DECREMENT_BEFORE, 0)
 DEFINE_LOAD_STORE_MULTIPLE_EX_THUMB(PUSHR, ARM_SP, STM, ARM_MEMORY_DECREMENT_BEFORE, 1 << ARM_LR)
 
-DEFINE_THUMB_DECODER(ILL, ILL, info->traps = 1;)
-DEFINE_THUMB_DECODER(BKPT, BKPT, info->traps = 1;)
+DEFINE_THUMB_DECODER(ILL, ILL,
+	info->operandFormat = ARM_OPERAND_NONE;
+	info->traps = 1;)
+
+DEFINE_THUMB_DECODER(BKPT, BKPT,
+	info->operandFormat = ARM_OPERAND_NONE;
+	info->traps = 1;)
 
 DEFINE_THUMB_DECODER(B, B,
 	int16_t immediate = (opcode & 0x07FF) << 5;
